fix: overflow

--- a/online-zoo/pages/main/style.css
+++ b/online-zoo/pages/main/style.css
@@ -801,6 +801,7 @@ a {
 
 .wrapper {
   max-width: 1600px;
+  overflow: hidden;
   margin: 0 auto;
 }
 
